fix letter spacing on mobile for the teaser cards.

--- a/components/teasercard.module.css
+++ b/components/teasercard.module.css
@@ -142,7 +142,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    letter-spacing: -0.0225rem;
+    letter-spacing: 0.035em;
   }
 
   .card .top_container .arrowDiv {
